--- a/arxiv/2020_06_arxiv.html
+++ b/arxiv/2020_06_arxiv.html
@@ -133,7 +133,31 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.14500">https://arxiv.org/abs/2005.14500</a></span> Topological second-order spin-3/2 liquids with hinge Fermi arcs ** (Shengyuan A. Yang)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.14622">https://arxiv.org/abs/2005.14622</a></span> Free fermionic and parafermionic quantum spin chains with multispin interactions</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.14329">https://arxiv.org/abs/2005.14329</a></span> Quantum Confinement Induced Metal-Insulator Transition in Strongly Correlated Quantum Wells of SrVO3 Superlattices</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.14710">https://arxiv.org/abs/2005.14710</a></span> Quasi-One-Dimensional Higher-Order Topological Insulators ** (Hongki Min)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.14710">https://arxiv.org/abs/2005.14710</a></span> Quasi-One-Dimensional Higher-Order Topological Insulators ** (Hongki Min)</p><br>
+<p class="p1">20200602</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.00712">https://arxiv.org/abs/2006.00712</a></span> Neural ODE and Holographic QCD *** (Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.01111">https://arxiv.org/abs/2006.01111</a></span> Higher-Order Topological Instanton Tunneling Oscillation *** (Moon Jip Park, SungBin Lee, Hee Chul Park, Youngkuk Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.00194">https://arxiv.org/abs/2006.00194</a></span> qeirreps: an open-source program for Quantum ESPRESSO to compute irreducible representations of Bloch wavefunctions (Haruki Watanabe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.00015">https://arxiv.org/abs/2006.00015</a></span> Conversion between electron spin and microscopic atomic rotation (Shuichi Murakami)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.00017">https://arxiv.org/abs/2006.00017</a></span> Phonon rotoelectric effect (Shuichi Murakami)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.00728">https://arxiv.org/abs/2006.00728</a></span> The Sachdev-Ye-Kitaev model and free Majorana variational states *** (Mark Srednicki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.00726">https://arxiv.org/abs/2006.00726</a></span> Dynamical quantum phase transitions in a spin chain with deconfined quantum critical points *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.00746">https://arxiv.org/abs/2006.00746</a></span> Quantum Ising chain with boundary dephasing (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.00092">https://arxiv.org/abs/2006.00092</a></span> Edge states of the long-range Kitaev chain: an analytical study ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.00159">https://arxiv.org/abs/2006.00159</a></span> Commuting projector models for (3+1)d topological superconductors via string net of (1+1)d topological superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.00911">https://arxiv.org/abs/2006.00911</a></span> Half-quantum vortices on c-axis domain walls in chiral p-wave superconductors (Manfred Sigrist)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.00175">https://arxiv.org/abs/2006.00175</a></span> Non supersymmetric femion boson symmetry **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.13492">https://arxiv.org/abs/1912.13492</a></span> Categorical symmetry and non-invertible anomaly in symmetry-breaking and topological phase transitions *** (Xiao-Gang Wen)</p>
+<p class="p2"><br></p>
+<p class="p1">20200603</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.01660">https://arxiv.org/abs/2006.01660</a></span> Evidence of Flat Bands and Correlated States in Buckled Graphene Superlattices ***</p>
+<p class="p3"><a href="https://arxiv.org/abs/2006.01177">https://arxiv.org/abs/2006.01177</a><span class="s2"> Quantum field thermal machines **</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.01156">https://arxiv.org/abs/2006.01156</a></span> The phase diagram of ultra quantum liquids ***** (Dam Thanh Son)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.01140">https://arxiv.org/abs/2006.01140</a></span> Deconfined criticality at the onset of antiferromagnetism in a metal ****** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.01282">https://arxiv.org/abs/2006.01282</a></span> Non-commutative field theory and composite Fermi Liquids in some quantum Hall systems ***** (T. Senthil)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2004.06646">https://arxiv.org/abs/2004.06646</a><span class="s2"> Connecting the SYK dots</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.09265">https://arxiv.org/abs/1912.09265</a></span> Dual Path Integral: a non-perturbative approach to strong coupling</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.01375">https://arxiv.org/abs/2006.01375</a></span> New point-like sources and a conducting surface in Maxwell-Chern-Simons electrodynamics ***</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
