--- a/arxiv/2020_06_arxiv.html
+++ b/arxiv/2020_06_arxiv.html
@@ -157,7 +157,40 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.01282">https://arxiv.org/abs/2006.01282</a></span> Non-commutative field theory and composite Fermi Liquids in some quantum Hall systems ***** (T. Senthil)</p>
 <p class="p3"><a href="https://arxiv.org/abs/2004.06646">https://arxiv.org/abs/2004.06646</a><span class="s2"> Connecting the SYK dots</span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.09265">https://arxiv.org/abs/1912.09265</a></span> Dual Path Integral: a non-perturbative approach to strong coupling</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.01375">https://arxiv.org/abs/2006.01375</a></span> New point-like sources and a conducting surface in Maxwell-Chern-Simons electrodynamics ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.01375">https://arxiv.org/abs/2006.01375</a></span> New point-like sources and a conducting surface in Maxwell-Chern-Simons electrodynamics ***</p><br>
+<p class="p1">20200604</p>
+<p class="p2"><a href="https://arxiv.org/abs/2006.01837">https://arxiv.org/abs/2006.01837</a><span class="s1"> Non-Hermitian Physics ***</span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.01834">https://arxiv.org/abs/2006.01834</a></span> Bilocal quantum criticality ***** (Harley D. Scammell, Mathias S. Scheurer, and Subir Sachdev)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.02073">https://arxiv.org/abs/2006.02073</a></span> Thermal Hall Effects of Spins and Phonons in Kagome Antiferromagnet Cd-Kapellasite ** (Hyun-Young Lee, Jung Hoon Han)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.02405">https://arxiv.org/abs/2006.02405</a></span> Universal Thermodynamics in the Kitaev Fractional Liquid ***</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2005.08234">https://arxiv.org/abs/2005.08234</a></span> Aspects on Effective Theories and the QCD transition ***</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.01870">https://arxiv.org/abs/2006.01870</a></span> An introduction to supermanifolds and supersymmetry **</p>
+<p class="p3"><br></p>
+<p class="p1">20200605</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.02989">https://arxiv.org/abs/2006.02989</a></span> Transfer matrix for long-range potentials</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.02744">https://arxiv.org/abs/2006.02744</a></span> Berry connections calculated from first principles ***</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.02485">https://arxiv.org/abs/2006.02485</a></span> Scrambling versus relaxation in Fermi and non-Fermi Liquids ***** (Jaewon Kim, Xiangyu Cao, Ehud Altman)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.02968">https://arxiv.org/abs/2006.02968</a></span> Interplay between superconductivity and non-Fermi liquid at a quantum critical point in a metal. II. The γ-model at a finite T for 0 &lt; γ &lt; 1 ***** (Yi-Ming Wu, Artem Abanov, Yuxuan Wang, and Andrey V. Chubukov)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.02473">https://arxiv.org/abs/2006.02473</a></span> Interacting quantum Hall states in a finite graphene flake and at finite temperature (Bitan Roy)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.03026">https://arxiv.org/abs/2006.03026</a></span> Effects of geometric frustration in Kitaev chains ***</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.02512">https://arxiv.org/abs/2006.02512</a></span> Exotic interband pairing in multiband superconductors ***</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2005.06909">https://arxiv.org/abs/2005.06909</a></span> Two-pole structures in QCD: Facts, not fantasy!</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2005.13233">https://arxiv.org/abs/2005.13233</a></span> Conserved charges in general relativity ***</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.02718">https://arxiv.org/abs/2006.02718</a></span> ’t Hooft-Polyakov monopoles in non-Hermitian quantum field theory ***</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.02886">https://arxiv.org/abs/2006.02886</a></span> ’t Hooft surface in lattice gauge theory **</p>
+<p class="p3"><br></p>
+<p class="p1">20200608</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.07851">https://arxiv.org/abs/2003.07851</a></span> Local Probes for Quantum Hall Ferroelectrics and Nematics *** (Pok Man Tam, Liang Fu)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.03344">https://arxiv.org/abs/2006.03344</a></span> Majorana zero modes and their bosonization ***</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.03479">https://arxiv.org/abs/2006.03479</a></span> Hierarchy of magnon entanglement in antiferromagnets</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.03187">https://arxiv.org/abs/2006.03187</a></span> Anomalous thermodynamic properties of quantum critical superconductors **</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.01815">https://arxiv.org/abs/2003.01815</a></span> Energy conditions in general relativity and quantum field theory</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2001.07957">https://arxiv.org/abs/2001.07957</a></span> CFT in Conformally Flat Spacetimes</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2002.02849">https://arxiv.org/abs/2002.02849</a></span> Geometric description of the Kitaev honeycomb lattice model</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.05899">https://arxiv.org/abs/2003.05899</a></span> SO(2) gauged Skyrmions in 4 + 1 dimensions</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2005.02882">https://arxiv.org/abs/2005.02882</a></span> Nonlinear parameter-gauge coupling approach to generalization of generalized Thouless pumps and −1-form anomaly ****</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.03380">https://arxiv.org/abs/2006.03380</a></span> SYMMETRIES AND REDUCTION PART I – POISSON AND SYMPLECTIC PICTURE</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.03455">https://arxiv.org/abs/2006.03455</a></span> Three-Body Inertia Tensor (June-Haak Ee, U-Rae Kim, Jungil Lee)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
