--- a/arxiv/2020_06_arxiv.html
+++ b/arxiv/2020_06_arxiv.html
@@ -190,7 +190,74 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.05899">https://arxiv.org/abs/2003.05899</a></span> SO(2) gauged Skyrmions in 4 + 1 dimensions</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2005.02882">https://arxiv.org/abs/2005.02882</a></span> Nonlinear parameter-gauge coupling approach to generalization of generalized Thouless pumps and −1-form anomaly ****</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.03380">https://arxiv.org/abs/2006.03380</a></span> SYMMETRIES AND REDUCTION PART I – POISSON AND SYMPLECTIC PICTURE</p>
-<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.03455">https://arxiv.org/abs/2006.03455</a></span> Three-Body Inertia Tensor (June-Haak Ee, U-Rae Kim, Jungil Lee)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2006.03455">https://arxiv.org/abs/2006.03455</a></span> Three-Body Inertia Tensor (June-Haak Ee, U-Rae Kim, Jungil Lee)</p><br>
+<p class="p1">20200609</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.03605">https://arxiv.org/abs/2006.03605</a></span> Anomalous dielectric response in insulators with the π Zak phase ** (Shuichi Murakami)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.03607">https://arxiv.org/abs/2006.03607</a></span> Glide-symmetric topological crystalline insulator phase in a nonprimitive lattice ** (Shuichi Murakami)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04782">https://arxiv.org/abs/2006.04782</a></span> Pressure Induced Topological Superconductivity in the Spin-Orbit Mott Insulator GaTa4Se8 *** (Moon Jip Park, GiBaik Sim, Myung Joon Han, SungBin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04204">https://arxiv.org/abs/2006.04204</a></span> Topological Duality in Floquet and Non-Hermitian Dynamical Anomalies: Extended Nielsen-Ninomiya Theorem and Chiral Magnetic Effect *** (Masatoshi Sato)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04297">https://arxiv.org/abs/2006.04297</a></span> Floquet engineering of twisted double bilayer graphene ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04374">https://arxiv.org/abs/2006.04374</a></span> Theory of edge states based on the hermiticity of tight-binding Hamiltonian operators ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04752">https://arxiv.org/abs/2006.04752</a></span> Interacting boundaries of 3D topological crystalline insulators: effective field theories through bosonisation **** (Jiannis K. Pachos)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04790">https://arxiv.org/abs/2006.04790</a></span> The effect of anisotropy on phase transitions in graphene ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04623">https://arxiv.org/abs/2006.04623</a></span> Cut and glue quenches in the AdS/BCFT model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04074">https://arxiv.org/abs/2006.04074</a></span> Giant surface Edelstein effect in d-wave superconductors *** (Youichi Yanase)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2006.04546">https://arxiv.org/abs/2006.04546</a><span class="s2"> Dirac, Majorana, Weyl in 4d ***</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.04821">https://arxiv.org/abs/1909.04821</a></span> Real Time Dynamics and Confinement in the Zn Schwinger- Weyl lattice model for 1+1 QED ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.01583">https://arxiv.org/abs/2004.01583</a></span> QGP universality in a magnetic field?</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.03771">https://arxiv.org/abs/2004.03771</a></span> Quantum spin operator of the photon</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06374">https://arxiv.org/abs/2005.06374</a></span> Deterministic quantum mechanics: the mathematical equations *** (Gerard ’t Hooft)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.03954">https://arxiv.org/abs/2006.03954</a></span> A MATHEMATICAL PICTURE LANGUAGE PROJECT</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04317">https://arxiv.org/abs/2006.04317</a></span> On Feynman’s handwritten notes on electromagnetism and the idea of introducing potentials before fields</p>
+<p class="p3"><br></p>
+<p class="p1">20200611</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04825">https://arxiv.org/abs/2006.04825</a></span> Many-body localization near the critical point ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.05886">https://arxiv.org/abs/2006.05886</a></span> Criticality in amorphous topological matter — beyond the universal scaling paradigm</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04817">https://arxiv.org/abs/2006.04817</a></span> Dislocation as a bulk probe of higher-order topological insulators ***** (Bitan Roy, Vladimir Juricic)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04890">https://arxiv.org/abs/2006.04890</a></span> Band Representations and Topological Quantum Chemistry *** (Barry Bradlyn)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04813">https://arxiv.org/abs/2006.04813</a></span> Domes of Tc in superconductors with finite-range attractive interactions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.05131">https://arxiv.org/abs/2006.05131</a></span> Resurgence and renormalons in the one-dimensional Hubbard model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.05524">https://arxiv.org/abs/2006.05524</a></span> Topological Quantum Computing on a Conventional Quantum Computer ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04834">https://arxiv.org/abs/2006.04834</a></span> Floating topological phases ***** (Steven Kivelson, Ereg Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.05920">https://arxiv.org/abs/2006.05920</a></span> Orbital effects in solids: basics and novel development</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.05864">https://arxiv.org/abs/2006.05864</a></span> Hexagonal Perovskites as Quantum Materials</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.05680">https://arxiv.org/abs/2006.05680</a></span> Quantum-Critical Spin-Density Waves in Iron-Selenide High-Tc Superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04853">https://arxiv.org/abs/2006.04853</a></span> The nonperturbative functional renormalization group and its applications</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.05429">https://arxiv.org/abs/2006.05429</a></span> An Effective Field Theory for Acoustic and Pseudo-Acoustic Phonons in Solids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04908">https://arxiv.org/abs/2006.04908</a></span> SCHWINGER-DYSON TYPE EQUATIONS FOR SOME QFT MODELS</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.05070">https://arxiv.org/abs/2006.05070</a></span> Conformal invariance from scale invariance in non-linear sigma models ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.05106">https://arxiv.org/abs/2006.05106</a></span> Lattice CP N −1 model with ZN twisted boundary condition: bions, adiabatic continuity and pseudo-entropy **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1807.07474">https://arxiv.org/abs/1807.07474</a></span> Elasticity bounds from Effective Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1604.01979">https://arxiv.org/abs/1604.01979</a></span> Quantum Yang-Mills theory: an overview of a programme</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1907.05419">https://arxiv.org/abs/1907.05419</a></span> Classical Limit of Large N Gauge Theories with Conformal Symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.11676">https://arxiv.org/abs/1909.11676</a></span> Bounds on Triangle Anomalies in (3+1)d *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.13234">https://arxiv.org/abs/2004.13234</a></span> Quantum simulation of quantum field theories as quantum chemistry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.05668">https://arxiv.org/abs/2004.05668</a></span> A note on electric-magnetic duality and soft charges</p>
+<p class="p3"><br></p>
+<p class="p1">20200612</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06161">https://arxiv.org/abs/2006.06161</a></span> Improved field theoretical approach to noninteracting Brownian particles in a quenched random potential *** (Joonhyun Yeo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06571">https://arxiv.org/abs/2006.06571</a></span> Electronic states in two-dimensional bilayer quasicrystals and the effects of interlayer and sublattice symmetries *** (Pulkyung Moon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06651">https://arxiv.org/abs/2006.06651</a></span> Creating Majorana modes from segmented Fermi surface *** (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06228">https://arxiv.org/abs/2006.06228</a></span> Observation of a strongly ferromagnetic spinor Bose-Einstein condensate ** (Jae-yoon Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06335">https://arxiv.org/abs/2006.06335</a></span> Leading theories of the cuprate superconductivity: a critique *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06536">https://arxiv.org/abs/2006.06536</a></span> Gapped boundaries and string-like excitations in (3+1)d gauge models of topological phases *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06524">https://arxiv.org/abs/2006.06524</a></span> Observation of a higher-order topological bound state in the continuum ***</p>
+<p class="p2"><a href="https://arxiv.org/abs/2006.06002">https://arxiv.org/abs/2006.06002</a><span class="s2"> Quantum Many-body Bootstrap *****</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06019">https://arxiv.org/abs/2006.06019</a></span> Traversable wormhole and Hawking-Page transition in coupled complex SYK models ***** (Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.12291">https://arxiv.org/abs/1912.12291</a></span> A model of quantum gravity with emergent spacetime ***** (Sung-Sik Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04076">https://arxiv.org/abs/2004.04076</a></span> Generalized Uncertainty Principle, Classical Mechanics, and General Relativity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06579">https://arxiv.org/abs/2006.06579</a></span> Quantization of the charge in Coulomb plus harmonic potential (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2001.01453">https://arxiv.org/abs/2001.01453</a></span> The Geometric Standard Model Effective Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.07127">https://arxiv.org/abs/2003.07127</a></span> Topological Objects in Holographic QCD</p>
+<p class="p3"><br></p>
+<p class="p1">20200615</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06785">https://arxiv.org/abs/2006.06785</a></span> THE NONCOMMUTATIVE GEOMETRY OF THE LANDAU HAMILTONIAN: METRIC ASPECTS</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06709">https://arxiv.org/abs/2006.06709</a></span> Low-frequency divergence and quantum geometry of the bulk photovoltaic effect in topological semimetals ***** (Junyeong Ahn, Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.07319">https://arxiv.org/abs/2006.07319</a></span> Strain-induced excitonic instability in twisted bilayer graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06916">https://arxiv.org/abs/2006.06916</a></span> Superconductivity mystery turns 25 (N. P. Armitage)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.07317">https://arxiv.org/abs/2006.07317</a></span> Spontaneous Breaking of U(1) Symmetry in Coupled Complex SYK Models ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.07369">https://arxiv.org/abs/2006.07369</a></span> What Symmetries are Preserved by a Fermion Boundary State? *** (David Tong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06952">https://arxiv.org/abs/2006.06952</a></span> Topological superconductivity in quasicrystals</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
