--- a/arxiv/2020_06_arxiv.html
+++ b/arxiv/2020_06_arxiv.html
@@ -257,7 +257,49 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06916">https://arxiv.org/abs/2006.06916</a></span> Superconductivity mystery turns 25 (N. P. Armitage)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.07317">https://arxiv.org/abs/2006.07317</a></span> Spontaneous Breaking of U(1) Symmetry in Coupled Complex SYK Models ****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.07369">https://arxiv.org/abs/2006.07369</a></span> What Symmetries are Preserved by a Fermion Boundary State? *** (David Tong)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06952">https://arxiv.org/abs/2006.06952</a></span> Topological superconductivity in quasicrystals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06952">https://arxiv.org/abs/2006.06952</a></span> Topological superconductivity in quasicrystals</p><br>
+<p class="p1">20200616</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.07386">https://arxiv.org/abs/2006.07386</a></span> Thermodynamic classification of three-dimensional Kitaev spin liquids ***** (Yukitoshi Motome, Simon Trebst)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.08289">https://arxiv.org/abs/2006.08289</a></span> A beginner’s guide to non-abelian iPEPS for correlated fermions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.08492">https://arxiv.org/abs/2006.08492</a></span> Curie-Weiss susceptibility in strongly correlated electron systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.07481">https://arxiv.org/abs/2006.07481</a></span> Novel Approaches to Renormalization Group Transformations in the Continuum and on the Lattice</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.08594">https://arxiv.org/abs/2006.08594</a></span> Feynman Lectures on the Strong Interactions ***</p>
+<p class="p2"><br></p>
+<p class="p1">20200617</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.08797">https://arxiv.org/abs/2006.08797</a></span> Multi-Region Entanglement in Locally Scrambled Quantum Dynamics ***** (Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.08908">https://arxiv.org/abs/2006.08908</a></span> Theory of ARPES in Graphene-Based Moir ́e Superlattices ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.08868">https://arxiv.org/abs/2006.08868</a></span> Anisotropic band flattening in graphene with 1D superlattices ** (Pilkyung Moon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.08891">https://arxiv.org/abs/2006.08891</a></span> Fermion-induced Dynamical Critical Point ***** (Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.08646">https://arxiv.org/abs/2006.08646</a></span> Quantum trimer models and topological SU(3) spin liquids on the kagome lattice ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.09069">https://arxiv.org/abs/2006.09069</a></span> Entanglement and symmetry resolution in two dimensional free quantum field theories *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.08653">https://arxiv.org/abs/2006.08653</a></span> Simulating exotic phases of matter with bond-directed interactions with arrays of Majorana-Cooper pair boxes ** (A. M. Tsvelik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.09283">https://arxiv.org/abs/2006.09283</a></span> Exceptional points in Fermi liquids with quadrupolar interactions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.03588">https://arxiv.org/abs/2006.03588</a></span> Anomaly cancellation with an extra gauge boson ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.05559">https://arxiv.org/abs/2006.05559</a></span> NON-ARCHIMEDEAN STATISTICAL FIELD THEORY ***</p>
+<p class="p2"><br></p>
+<p class="p1">20200618</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.09753">https://arxiv.org/abs/2006.09753</a></span> Nonlinearity induced topological physics in momentum space and real space</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.09515">https://arxiv.org/abs/2006.09515</a></span> Lattice Symmetry and Emergence of Antiferromagnetic Quantum Hall States</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.09748">https://arxiv.org/abs/2006.09748</a></span> Entanglement Transition in the Projective Transverse Field Ising Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.09440">https://arxiv.org/abs/2006.09440</a></span> The Bethe-Salpeter Equation Formalism: From Physics to Chemistry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.09784">https://arxiv.org/abs/2006.09784</a></span> Vestigial Van Hove singularity and higher-temperature superconducting phase induced by perpendicular uniaxial pressures in quasi-two-dimensional superconductors ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.09508">https://arxiv.org/abs/2006.09508</a></span> A technique for natural gauge boson masses ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.09546">https://arxiv.org/abs/2006.09546</a></span> Instructive Review of Novel SFT with Non-interacting consituents “objects”, and attempt Generalization to p-adic theory ***** (Holger Bech Nielsen, Masao Ninomiya)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.09777">https://arxiv.org/abs/2006.09777</a></span> The Geometry, Branes and Applications of Exceptional Field Theory</p>
+<p class="p2"><br></p>
+<p class="p1">20200619</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10684">https://arxiv.org/abs/2006.10684</a></span> Spin magnetometry as a probe of stripe superconductivity in twisted bilayer graphene ***** (Piers Coleman, A. M. Tsvelik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10391">https://arxiv.org/abs/2006.10391</a></span> Non-Hermiticity and topological invariants of magnon Bogoliubov-de Gennes systems *** (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10602">https://arxiv.org/abs/2006.10602</a></span> Tunable chirality of noncentrosymmetric magnetic Weyl semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10454">https://arxiv.org/abs/2006.10454</a></span> Free-energy functional of instantaneous correlation field in liquids: field-theoretic derivation of the closures</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10073">https://arxiv.org/abs/2006.10073</a></span> Spin-polarized superconductivity: order parameter topology, current dissipation, and double-period Josephson effect *** (Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10200">https://arxiv.org/abs/2006.10200</a></span> GAPPED BOUNDARY THEORIES IN THREE DIMENSIONS ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10071">https://arxiv.org/abs/2006.10071</a></span> Lattice Clifford fractons and their Chern-Simons-like theory ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10081">https://arxiv.org/abs/2006.10081</a></span> Phases and Quantum Phase Transitions in an Anisotropic Ferromagnetic Kitaev-Heisenberg- Γ Magnet</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10294">https://arxiv.org/abs/2006.10294</a></span> Cardy Limits of 6d Superconformal Theories (Kimyeong Lee, June Nahmgoong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1910.14575">https://arxiv.org/abs/1910.14575</a></span> Conformal field theory and the web of quantum chaos diagnostics *** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10438">https://arxiv.org/abs/2006.10438</a></span> A FAMILY OF TQFT’S ASSOCIATED WITH HOMOLOGY THEORY ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10072">https://arxiv.org/abs/2006.10072</a></span> Periodically, Quasi-periodically, and Randomly Driven Conformal Field Theories: Part I (Ashvin Vishwanath)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
