--- a/arxiv/2020_06_arxiv.html
+++ b/arxiv/2020_06_arxiv.html
@@ -299,7 +299,22 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10294">https://arxiv.org/abs/2006.10294</a></span> Cardy Limits of 6d Superconformal Theories (Kimyeong Lee, June Nahmgoong)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1910.14575">https://arxiv.org/abs/1910.14575</a></span> Conformal field theory and the web of quantum chaos diagnostics *** (Shinsei Ryu)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10438">https://arxiv.org/abs/2006.10438</a></span> A FAMILY OF TQFT’S ASSOCIATED WITH HOMOLOGY THEORY ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10072">https://arxiv.org/abs/2006.10072</a></span> Periodically, Quasi-periodically, and Randomly Driven Conformal Field Theories: Part I (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10072">https://arxiv.org/abs/2006.10072</a></span> Periodically, Quasi-periodically, and Randomly Driven Conformal Field Theories: Part I (Ashvin Vishwanath)</p><br>
+<p class="p1">20200622</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.11254">https://arxiv.org/abs/2006.11254</a></span> Physics of Psychophysics: two coupled square lattices of spiking neurons have huge dynamic range at criticality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10899">https://arxiv.org/abs/2006.10899</a></span> Bogoliubov-Fermi surfaces in non-centrosymmetric multi-component superconductors ***** (Igor F. Herbut)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.11198">https://arxiv.org/abs/2006.11198</a></span> Deterministic chaos and fractal entropy scaling in Floquet CFT</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10780">https://arxiv.org/abs/2006.10780</a></span> Constraining Non-Relativistic RG Flows with Holography *****</p>
+<p class="p2"><br></p>
+<p class="p1">20200623</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.11763">https://arxiv.org/abs/2006.11763</a></span> Plasmonic Dirac Cone in Twisted Bilayer Graphene **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.11549">https://arxiv.org/abs/2006.11549</a></span> An introduction to Kitaev model-I *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.12071">https://arxiv.org/abs/2006.12071</a></span> Spin Hall conductivity in insulators with non-conserved spin **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.11504">https://arxiv.org/abs/2006.11504</a></span> Dynamical Kosterlitz-Thouless Theory for Two-Dimensional Ultracold Atomic Gases</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.11883">https://arxiv.org/abs/2006.11883</a></span> Majorana orthogonal transformation and Majorana zero modes in free fermionic systems **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.09546">https://arxiv.org/abs/2006.09546</a></span> Instructive Review of Novel SFT with Non-interacting consituents “objects”, and attempt Generalization to p-adic theory (Holger Bech Nielsen, Masao Ninomiya)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.11329">https://arxiv.org/abs/2006.11329</a></span> Quantum and classical approaches in statistical physics: game theoretic interpretation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.03683">https://arxiv.org/abs/2006.03683</a></span> SIGN PROBLEMS IN QUANTUM FIELD THEORY: CLASSICAL AND QUANTUM APPROACHES</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
